added box shadow for buttons

--- a/styles/main.css
+++ b/styles/main.css
@@ -53,6 +53,7 @@
 .btn__header:active{
     background-color: var(--green-color);
     color: var(--white-color);
+    box-shadow: 2px 2px 3px 1px #000;
 
 }
 
