--- a/styles/main.css
+++ b/styles/main.css
@@ -2,6 +2,8 @@
 /* HEADER MAIN */
 .header{
     background: url('../assets/images/header_photo.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
     height: 100vh;
     position: relative;
